<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="product"
            type="lt.manufaktura.app.model.product.Product" />

        <variable
            name="viewmodel"
            type="lt.manufaktura.app.model.product.ProductViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_view_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="200dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_picture_name_input_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_name_hint"
                    android:singleLine="true"
                    android:text='@={product.name}' />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/open_gallery_btn_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/open_gallery_btn_txt" />

            <Button
                android:id="@+id/take_picture_btn_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/take_picture_btn_txt" />

            <Button
                android:id="@+id/create_btn_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/create_btn_txt" />
        </LinearLayout>

    </ScrollView>
</layout>