<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="lt.manufaktura.app.model.product.ProductViewModel" />
        <variable
            name="product"
            type="lt.manufaktura.app.model.product.Product" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/product_name_input_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={product.name}"
                android:singleLine="true"
                android:hint="@string/product_name_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/product_section_input_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={product.section}"
                android:singleLine="true"
                android:hint="@string/section_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/product_price_input_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:text='@={"" + product.price}'
                android:singleLine="true"
                android:hint="@string/price_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/product_category_input_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={product.category}"
                android:singleLine="true"
                android:hint="@string/category_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/product_description_input_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={product.description}"
                android:hint="@string/description_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/save_data_btn_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_data_btn_txt"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/scanner_btn_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="36dp"
            android:src="@android:drawable/ic_menu_camera" />
    </LinearLayout>
</layout>