<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="product"
            type="lt.manufaktura.app.model.product.Product" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/single_product_image_view_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/product_details_name_title_txt_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/product_details_name_title_txt_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_item_name"
            app:layout_constraintBottom_toBottomOf="@+id/product_details_name_txt_id"
            app:layout_constraintStart_toStartOf="@+id/product_details_section_title_txt_id"
            app:layout_constraintTop_toTopOf="@+id/product_details_name_txt_id" />

        <TextView
            android:id="@+id/product_details_section_title_txt_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_item_section"
            app:layout_constraintStart_toStartOf="@+id/product_details_category_title_txt_id"
            app:layout_constraintTop_toBottomOf="@+id/product_details_name_title_txt_id" />

        <TextView
            android:id="@+id/product_details_category_title_txt_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_item_category"
            app:layout_constraintStart_toStartOf="@+id/product_details_price_title_txt_id"
            app:layout_constraintTop_toBottomOf="@+id/product_details_section_title_txt_id" />

        <TextView
            android:id="@+id/product_details_price_title_txt_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/product_item_price"
            app:layout_constraintStart_toStartOf="@+id/product_details_description_title_txt_id"
            app:layout_constraintTop_toBottomOf="@+id/product_details_category_title_txt_id" />

        <TextView
            android:id="@+id/product_details_name_txt_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="171dp"
            android:text="@{product.name}"
            app:layout_constraintEnd_toEndOf="@+id/product_details_section_txt_id"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/product_details_section_txt_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{product.section}"
            app:layout_constraintEnd_toEndOf="@+id/product_details_category_txt_id"
            app:layout_constraintTop_toBottomOf="@+id/product_details_name_txt_id" />

        <TextView
            android:id="@+id/product_details_category_txt_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{product.category}"
            app:layout_constraintEnd_toEndOf="@+id/product_details_price_txt_id"
            app:layout_constraintTop_toBottomOf="@+id/product_details_section_txt_id" />

        <TextView
            android:id="@+id/product_details_price_txt_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text='@{"" + product.price}'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_details_category_txt_id" />

        <TextView
            android:id="@+id/product_details_description_title_txt_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/product_item_description"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_details_price_title_txt_id" />

        <TextView
            android:id="@+id/product_details_description_txt_id"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:gravity="start"
            android:text="@{product.description}"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/delete_product_details_btn_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_details_description_title_txt_id" />

        <Button
            android:id="@+id/edit_product_details_btn_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/edit_product_details_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/delete_product_details_btn_id"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/delete_product_details_btn_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/delete_product_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/edit_product_details_btn_id" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>